crates/peach_domain/src/transformer/snapshots/peach_domain__transformer__set_model__tests__set_model_preserves_existing_models.snap
---
source: crates/peach_domain/src/transformer/set_model.rs
expression: snapshot
---
transformation: SetModel(gpt-4)_preserve_existing
before:
  messages:
    - text:
        role: User
        content: User message 1
    - text:
        role: User
        content: User message 2
        model: claude-3
    - text:
        role: User
        content: User message 3
after:
  messages:
    - text:
        role: User
        content: User message 1
        model: gpt-4
    - text:
        role: User
        content: User message 2
        model: claude-3
    - text:
        role: User
        content: User message 3
        model: gpt-4
